Rules footer, more darkmode friendly, fixed a gap in design.

--- a/src/routes/global.scss
+++ b/src/routes/global.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(200, 200, 200);
+    background-color: rgb(150, 150, 150);
 }
 p {
     margin-bottom: 0 !important;
